--- a/lesson_3_basics/homework_3_got.ipynb
+++ b/lesson_3_basics/homework_3_got.ipynb
@@ -161,7 +161,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7318,
+      "execution_count": 7653,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -186,7 +186,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7319,
+      "execution_count": 7654,
       "metadata": {
         "id": "QO08nAt6mO7E"
       },
@@ -212,7 +212,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7320,
+      "execution_count": 7655,
       "metadata": {
         "id": "v0HRU0trQLmS"
       },
@@ -235,7 +235,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7321,
+      "execution_count": 7656,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -270,7 +270,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7322,
+      "execution_count": 7657,
       "metadata": {
         "id": "Pzc5a4enmYtn"
       },
@@ -307,7 +307,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7323,
+      "execution_count": 7658,
       "metadata": {
         "id": "bTKTcPAddBFw"
       },
@@ -367,7 +367,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7324,
+      "execution_count": 7659,
       "metadata": {
         "id": "gDret9EFgo_8"
       },
@@ -429,7 +429,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7325,
+      "execution_count": 7660,
       "metadata": {},
       "outputs": [
         {
@@ -459,7 +459,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7326,
+      "execution_count": 7661,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -480,7 +480,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7327,
+      "execution_count": 7662,
       "metadata": {
         "id": "GK1X0OBPb4m-"
       },
@@ -492,7 +492,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7328,
+      "execution_count": 7663,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -510,7 +510,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7329,
+      "execution_count": 7664,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -533,7 +533,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7330,
+      "execution_count": 7665,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -550,7 +550,7 @@
         "\n",
         "MODELS = [\n",
         "    LogisticRegression(C=1, max_iter=1000, random_state=42),\n",
-        "    RandomForestClassifier(n_jobs=-1, n_estimators=150, random_state=42),\n",
+        "    RandomForestClassifier(n_jobs=-1, n_estimators=150, random_state=42, max_depth=14),\n",
         "    AdaBoostClassifier(algorithm='SAMME', random_state=42),\n",
         "    GaussianNB(),\n",
         "    KNeighborsClassifier(n_jobs=-1),\n",
@@ -590,17 +590,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7332,
+      "execution_count": 7666,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "0.8375 / 0.8632  RandomForestClassifier(n_estimators=150, n_jobs=-1, random_state=42)\n",
             "0.8458 / 0.8590  AdaBoostClassifier(algorithm='SAMME', random_state=42)\n",
             "0.8103 / 0.8547  DecisionTreeClassifier(random_state=42)\n",
             "0.8398 / 0.8291  LogisticRegression(C=1, max_iter=1000, random_state=42)\n",
+            "0.8541 / 0.8291  RandomForestClassifier(max_depth=14, max_leaf_nodes=19, n_estimators=150,\n",
+            "                       n_jobs=-1, random_state=42)\n",
             "0.8367 / 0.8291  KNeighborsClassifier(n_jobs=-1)\n",
             "0.8503 / 0.8291  SVC(random_state=42)\n",
             "0.8466 / 0.8291  GaussianProcessClassifier(n_jobs=-1, n_restarts_optimizer=5, random_state=42)\n",
@@ -615,14 +616,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7333,
+      "execution_count": 7606,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "RandomForestClassifier(n_estimators=150, n_jobs=-1, random_state=42) 0.8632\n"
+            "RandomForestClassifier(max_depth=14, n_estimators=150, n_jobs=-1,\n",
+            "                       random_state=42) 0.8675\n"
           ]
         }
       ],
@@ -654,7 +656,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7334,
+      "execution_count": 7607,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -669,7 +671,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7335,
+      "execution_count": 7608,
       "metadata": {
         "id": "9ae_dGCf1Jpi"
       },
@@ -680,7 +682,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7336,
+      "execution_count": 7609,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -705,7 +707,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7337,
+      "execution_count": 7610,
       "metadata": {
         "id": "FdCgUj7Z1Oty"
       },
