--- a/lesson_3_basics/homework_3_got.ipynb
+++ b/lesson_3_basics/homework_3_got.ipynb
@@ -161,7 +161,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7653,
+      "execution_count": 7674,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -186,7 +186,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7654,
+      "execution_count": 7675,
       "metadata": {
         "id": "QO08nAt6mO7E"
       },
@@ -212,7 +212,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7655,
+      "execution_count": 7676,
       "metadata": {
         "id": "v0HRU0trQLmS"
       },
@@ -235,7 +235,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7656,
+      "execution_count": 7677,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -270,7 +270,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7657,
+      "execution_count": 7678,
       "metadata": {
         "id": "Pzc5a4enmYtn"
       },
@@ -307,7 +307,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7658,
+      "execution_count": 7679,
       "metadata": {
         "id": "bTKTcPAddBFw"
       },
@@ -367,7 +367,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7659,
+      "execution_count": 7680,
       "metadata": {
         "id": "gDret9EFgo_8"
       },
@@ -429,7 +429,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7660,
+      "execution_count": 7681,
       "metadata": {},
       "outputs": [
         {
@@ -459,7 +459,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7661,
+      "execution_count": 7682,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -480,7 +480,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7662,
+      "execution_count": 7683,
       "metadata": {
         "id": "GK1X0OBPb4m-"
       },
@@ -492,7 +492,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7663,
+      "execution_count": 7684,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -510,7 +510,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7664,
+      "execution_count": 7685,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -533,7 +533,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7665,
+      "execution_count": 7686,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -590,18 +590,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7666,
+      "execution_count": 7687,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
+            "0.8420 / 0.8675  RandomForestClassifier(max_depth=14, n_estimators=150, n_jobs=-1,\n",
+            "                       random_state=42)\n",
             "0.8458 / 0.8590  AdaBoostClassifier(algorithm='SAMME', random_state=42)\n",
             "0.8103 / 0.8547  DecisionTreeClassifier(random_state=42)\n",
             "0.8398 / 0.8291  LogisticRegression(C=1, max_iter=1000, random_state=42)\n",
-            "0.8541 / 0.8291  RandomForestClassifier(max_depth=14, max_leaf_nodes=19, n_estimators=150,\n",
-            "                       n_jobs=-1, random_state=42)\n",
             "0.8367 / 0.8291  KNeighborsClassifier(n_jobs=-1)\n",
             "0.8503 / 0.8291  SVC(random_state=42)\n",
             "0.8466 / 0.8291  GaussianProcessClassifier(n_jobs=-1, n_restarts_optimizer=5, random_state=42)\n",
