Add epoch learning info

--- a/lesson_12_conv_networks/simpsons_baseline.ipynb
+++ b/lesson_12_conv_networks/simpsons_baseline.ipynb
@@ -1142,6 +1142,9 @@
     "# Epoch 016     train_loss: 0.2233 train_acc: 0.9339 val_loss: 0.5999 val_acc: 0.8638\n",
     "# = add RandomRotation(15) along with (30), F1: 0.9\n",
     "\n",
+    "# Epoch 016        train_loss: 0.2233 train_acc: 0.9339 val_loss: 0.5999 val_acc: 0.8638\n",
+    "# add weight_decay=2e-4 to Adam, F1: 0.95\n",
+    "\n",
     "# - Kaggle result: 0.96493, mission accomplished."
    ]
   },
