Fix VAE sampling

--- a/lesson_9_neural_networks/[homework]dense_and_convolutional_nn.ipynb
+++ b/lesson_9_neural_networks/[homework]dense_and_convolutional_nn.ipynb
@@ -28,16 +28,13 @@
    "outputs": [],
    "source": [
     "import seaborn as sns\n",
+    "import torch\n",
     "from matplotlib import pyplot as plt\n",
-    "\n",
     "from sklearn.datasets import make_moons\n",
     "from sklearn.model_selection import train_test_split\n",
-    "\n",
-    "import torch\n",
     "from torch import nn\n",
     "from torch.nn import functional as F\n",
-    "from torch.utils.data import TensorDataset, DataLoader\n",
-    "\n",
+    "from torch.utils.data import DataLoader, TensorDataset\n",
     "from tqdm.notebook import tqdm\n",
     "\n",
     "sns.set(style=\"darkgrid\", font_scale=1.4)"
@@ -346,14 +343,10 @@
     "        optimizer.step()\n",
     "        probabilities = torch.sigmoid(outp)\n",
     "        preds = (probabilities > 0.5).type(torch.long)\n",
-    "        batch_acc = (preds.flatten() == y_batch).type(\n",
-    "            torch.float32\n",
-    "        ).sum() / y_batch.size(0)\n",
+    "        batch_acc = (preds.flatten() == y_batch).type(torch.float32).sum() / y_batch.size(0)\n",
     "\n",
     "        if (it + epoch * len(train_dataloader)) % 100 == 0:\n",
-    "            print(\n",
-    "                f\"Iteration: {it + epoch * len(train_dataloader)}\\nBatch accuracy: {batch_acc}\"\n",
-    "            )\n",
+    "            print(f\"Iteration: {it + epoch * len(train_dataloader)}\\nBatch accuracy: {batch_acc}\")\n",
     "        current_weights = linear_regression.weights.detach().clone()\n",
     "        if (prev_weights - current_weights).abs().max() < tol:\n",
     "            print(\n",
@@ -550,10 +543,8 @@
    "outputs": [],
    "source": [
     "import torch\n",
-    "from torchvision.datasets import MNIST\n",
-    "\n",
     "from torchvision import transforms as tfs\n",
-    "\n",
+    "from torchvision.datasets import MNIST\n",
     "\n",
     "data_tfs = tfs.Compose([tfs.ToTensor(), tfs.Normalize((0.5), (0.5))])\n",
     "\n",
@@ -876,9 +867,7 @@
     "device = torch.device(\"mps\" if torch.mps.is_available() else \"cpu\")\n",
     "\n",
     "\n",
-    "def test_activation_function(\n",
-    "    activation: nn.Module, device=torch.device(\"mps\")\n",
-    ") -> list[float]:\n",
+    "def test_activation_function(activation: nn.Module, device=torch.device(\"mps\")) -> list[float]:\n",
     "    model = get_model(activation).to(device)\n",
     "    criterion = nn.CrossEntropyLoss().to(device)\n",
     "\n",
@@ -1634,9 +1623,7 @@
     "plt.figure(figsize=(16, 10))\n",
     "plt.title(\"Valid accuracy\")\n",
     "plt.plot(range(max_epochs), relu_accuracy, label=\"ReLU activation\", linewidth=2)\n",
-    "plt.plot(\n",
-    "    range(max_epochs), leaky_relu_accuracy, label=\"LeakyReLU activation\", linewidth=2\n",
-    ")\n",
+    "plt.plot(range(max_epochs), leaky_relu_accuracy, label=\"LeakyReLU activation\", linewidth=2)\n",
     "plt.plot(range(max_epochs), elu_accuracy, label=\"ELU activation\", linewidth=2)\n",
     "plt.plot(range(max_epochs), lenet_accuracy, label=\"LeNet\", linewidth=2)\n",
     "plt.legend()\n",
